// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthCode renders 1`] = `
<div
  className="sc-jztukc hRhifT"
  dir="ltr"
>
  <div />
</div>
`;

exports[`AuthCode renders Custom length 1`] = `
<div
  className="sc-jztukc hRhifT"
  dir="ltr"
>
  <div>
    <div
      className="sc-OIPhM eJfoUp"
    >
      <div
        className="sc-dZiGjT jXscPG"
        disabled={false}
      >
        <input
          className="sc-RYuTI cQXEwx"
          dir="ltr"
          disabled={false}
          id="auth-code-part-0"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-OIPhM eJfoUp"
    >
      <div
        className="sc-dZiGjT blDaWQ"
        disabled={true}
      >
        <input
          className="sc-RYuTI cQXEwx"
          dir="ltr"
          disabled={true}
          id="auth-code-part-1"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-OIPhM eJfoUp"
    >
      <div
        className="sc-dZiGjT blDaWQ"
        disabled={true}
      >
        <input
          className="sc-RYuTI cQXEwx"
          dir="ltr"
          disabled={true}
          id="auth-code-part-2"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-OIPhM eJfoUp"
    >
      <div
        className="sc-dZiGjT blDaWQ"
        disabled={true}
      >
        <input
          className="sc-RYuTI cQXEwx"
          dir="ltr"
          disabled={true}
          id="auth-code-part-3"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthCode renders Error state 1`] = `
<div
  className="sc-jztukc kZgMHD"
  dir="ltr"
>
  <div>
    <div
      className="sc-OIPhM eJfoUp"
    >
      <div
        className="sc-dZiGjT jXscPG"
        disabled={false}
      >
        <input
          className="sc-RYuTI hLVmv"
          dir="ltr"
          disabled={false}
          id="auth-code-part-0"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-OIPhM eJfoUp"
    >
      <div
        className="sc-dZiGjT blDaWQ"
        disabled={true}
      >
        <input
          className="sc-RYuTI hLVmv"
          dir="ltr"
          disabled={true}
          id="auth-code-part-1"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-OIPhM eJfoUp"
    >
      <div
        className="sc-dZiGjT blDaWQ"
        disabled={true}
      >
        <input
          className="sc-RYuTI hLVmv"
          dir="ltr"
          disabled={true}
          id="auth-code-part-2"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-OIPhM eJfoUp"
    >
      <div
        className="sc-dZiGjT blDaWQ"
        disabled={true}
      >
        <input
          className="sc-RYuTI hLVmv"
          dir="ltr"
          disabled={true}
          id="auth-code-part-3"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-OIPhM eJfoUp"
    >
      <div
        className="sc-dZiGjT blDaWQ"
        disabled={true}
      >
        <input
          className="sc-RYuTI hLVmv"
          dir="ltr"
          disabled={true}
          id="auth-code-part-4"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-OIPhM eJfoUp"
    >
      <div
        className="sc-dZiGjT blDaWQ"
        disabled={true}
      >
        <input
          className="sc-RYuTI hLVmv"
          dir="ltr"
          disabled={true}
          id="auth-code-part-5"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-jhJOaJ gYHbrD"
      data-testid="undefined-error"
    >
      <p
        className="sc-hFbbzE cDtORI"
        color="chiChi.100"
        size={12}
      >
        Provided value is not valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`AuthCode renders Only digits 1`] = `
<div
  className="sc-jztukc hRhifT"
  dir="ltr"
>
  <div />
</div>
`;
